--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="header-container"> 
                 <a lang="en" class="link header-logo-web" href="#">Web<span class="header-logo-studio">Studio</span></a>   
                 <ul class="list header-container">
-                    <li class="header-navigate-list current"><a class="link navigate" href="./index.html">Студия</a></li>
+                    <li class="header-navigate-list current"><a class="link navigate current" href="./index.html">Студия</a></li>
                     <li class="header-navigate-list"><a class="link navigate" href="./portfolio.html">Портфолио</a></li>
                     <li class="header-navigate-list"><a class="link navigate" href="">Контакты</a></li>
                 </ul>
