--- a/portfolio.html
+++ b/portfolio.html
@@ -243,7 +243,23 @@
                         </a>
                     </li>
                 </ul>
+            </div> 
+            <!-- footer form -->
+            <div class="footer-form-container">
+                <p class="footer-text">Підпишіться на розсилку</p>
+                <div class="footer-form-btn">
+                    <form class="footer-form">
+                        <input type="email" class="footer-field-form" placeholder="E-mail" required>
+                    </form>
+                    <button class="footer-btn-form" type="button">
+                        Підписатися
+                        <svg class="footer-icon-btn-form">
+                            <use href="./images/sprite.svg#icon-telegram"></use>
+                        </svg>
+                    </button>
+                </div>
             </div>   
+        </div>         
         </div>
     </footer>
 </body>
