исправления после проверки

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                             </svg>
                         </span>                        
                     </label>
-                    <label class="modal-title-field">
+                    <label class="modal-title-field modal-title-field-comments">
                         <span class="modal-meaning">Коментар</span>
                         <textarea class="modal-field-comments" name="user_comments" placeholder="Введіть текст"></textarea>
                     </label>
